# ZI-Practice

./: App.xaml  App.xaml.cpp  App.xaml.h  CMakeLists.txt  CMakePresets.json  Main.cpp  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  Package.appxmanifest  README.md  RpcMemory.cpp  ServiceMain.cpp  ServiceManager.cpp  ServiceManager.h  ServiceRpc.idl  TrayIconManager.cpp  TrayIconManager.h  XamlMetaDataProvider.idl  ZIVPO.vcxproj  ZIVPO.vcxproj.filters  app.manifest  pch.h  readme.txt
.github/workflows/: build-cmake.yml
cmake/: WixPatch.cpack.wxs
scripts/: Configure-Installed-ZIVPO.ps1  Install-WindowsAppRuntime-CurrentUser.ps1  Install-ZIVPO.ps1  Unconfigure-Installed-ZIVPO.ps1  Uninstall-ZIVPO.ps1
